+ URLs in head fix + Close modals on scroll + Fixed section 1 back on tablet

--- a/src/styles.css
+++ b/src/styles.css
@@ -1072,6 +1072,17 @@ li {
 /*----------- Tablets ---------------*/
 
 @media screen and (max-width:1280px) and (orientation:landscape) {
+    #section-1-back-container {
+        width: auto;
+        max-width: 102vw;
+        top: -6vh !important;
+        left: 0 !important;
+    }
+    /* #section-1-back {
+        width: auto;
+        height: 100vh;
+    } */
+
     .section-1-main-text,
     .bottom-nav {
         pointer-events: auto;
